kyverno-networkpolicy-training/code/kyverno/tag09/ns-c.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-c
  labels: {guard-lab: demo, team: tenant-c, tenant: c}
